# nootnoot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  example-config.toml  testconfig.toml
config/: nootnoot.docker.toml  nootnoot.example.toml
packaging/arch/: PKGBUILD
packaging/systemd/: nootnoot.service
src/: main.rs  main_old.rs  webui.rs
static/: index.html
