[package]
name = "nootnoot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
ctrlc = "3.4.5"
ping-rs = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full", "macros"] }
toml = "0.8.19"
warp = "0.3.7"
