[package]
name = "nootnoot"
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
ctrlc = "3.4.5"
ping-rs = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "macros"] }
toml = "0.8.20"
warp = "0.3.7"

[[bin]]
name = "nootnoot"
path = "src/main.rs"
