[package]
name = "nootnoot"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
hyper = { version = "1.8.1", features = ["server"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "time"] }

[[bin]]
name = "nootnoot"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.23.0"
